1.前后置条件学习 2.@fixture夹具学习 3.框架分层初次接触 4.日志模块logging学习 等等....

--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,26 +1,92 @@
 # UI自动化分层
-##### 1.用例层：用例
-##### 2.po层：页面对象
-##### 3.操作层：操作方法（如：输入，点击，选择，截图等）
-##### 4.元素层：元素定位
+1. **用例层**：编写具体测试用例。
+2. **PO层**：定义页面对象。
+3. **操作层**：封装基本操作方法（如输入、点击、选择、截图等）。
+4. **元素层**：负责元素定位。
 
 # pytest常用运行参数
-##### -m: 运行指定标签的用例,可以在pytest.ini中配置标签，如：markers = p0 p1 p2
-##### -k: 运行指定用例，支持正则表达式，如：-k test_login_001
-##### -s: 显示所有print输出，默认不显示
-##### -n: 并发运行用例，如：-n 4
-##### -q: 简化输出，只显示用例名和结果
-##### --alluredir: 生成allure报告，如：--alluredir=./report/allure_report
-##### --clean-alluredir: 清空allure报告目录，避免重复生成报告
-##### --allure-server: 将allure报告上传到allure服务器
+- `-m`：运行指定标签的用例。可在`pytest.ini`中配置标签，例如：`markers = p0 p1 p2`。
+- `-k`：运行指定名称的用例，支持正则表达式，例如：`-k test_login_001`。
+- `-s`：显示所有`print`输出，默认不显示。
+- `-n`：并发运行用例，例如：`-n 4`。
+- `-q`：简化输出，仅显示用例名和结果。
+- `--alluredir`：生成Allure报告，例如：`--alluredir=./report/allure_report`。
+- `--clean-alluredir`：清空Allure报告目录，避免重复生成报告。
+- `--allure-server`：将Allure报告上传至Allure服务器。
+
 # 测试用例跳过方法
-##### 1.@pytest.mark.skip 直接跳过，不执行用例
-##### 2.@pytest.mark.skipif() 条件跳过，条件为真时跳过，如：@pytest.mark.skipif(1==1)
-# 前后置方法setup/teardown
-##### 1.setup_module()/teardown_module: 模块级方法，模块前置/后置, 在模块内所有用例执行前/后只执行一次
-##### 2.setup_class()/teardown_class: 类级方法，类前置/后置，在类内所有用例执行前/后只执行一次
-##### 3.setup_function()/teardown_function: 函数级方法，函数前置/后置，在函数内所有用例执行前/后只执行一次
-##### 4.setup_method()/teardown_method: 方法级方法，方法前置/后置，在方法内所有用例执行前/后只执行一次
-# 前后置方法fixtures
+1. `@pytest.mark.skip`：直接跳过，不执行用例。
+2. `@pytest.mark.skipif(condition)`：条件跳过，当条件为真时跳过，例如：`@pytest.mark.skipif(1==1)`。
+
+# 前后置方法 setup/teardown
+1. `setup_module()/teardown_module`：模块级方法，在模块内的所有用例执行前后各执行一次。
+2. `setup_class()/teardown_class`：类级方法，在类内的所有用例执行前后各执行一次。
+3. `setup_function()/teardown_function`：函数级方法，在函数内的所有用例执行前后各执行一次。
+4. `setup_method()/teardown_method`：方法级方法，在方法内的所有用例执行前后各执行一次。
+
+# 前后置方法 fixtures 夹具：`@pytest.fixture`
+1. `scope`：默认为`function`，即每个用例前都会执行。
+2. 可选值：
+   - `function`：每个函数或方法前都会执行。
+   - `class`：每个类前都会执行。
+   - `module`：每个模块前都会执行。
+   - `session`：整个项目只执行一次。
+3. 示例：
+    - `@pytest.fixture(scope='function')`
+    - `@pytest.fixture(scope='class')`
+    - `@pytest.fixture(scope='module')`
+    - `@pytest.fixture(scope='session')`
+4. 作用范围：`session > module > class > function`
+5. 代码举例：
+```python
+import pytest
 
 
+@pytest.fixture(scope='session')
+def session_fixture():
+    print('我是session_fixture')
+
+
+@pytest.fixture(scope='module')
+def module_fixture():
+    print('我是module_fixture')
+
+
+@pytest.fixture(scope='class')
+def class_fixture():
+    print('我是class_fixture')
+
+
+@pytest.fixture(scope='function')
+def func_fixture():
+    print('我是func_fixture')
+
+
+class TestOrder:
+    def test_1(self, class_fixture, func_fixture, session_fixture, module_fixture, ):
+        assert 1 == 1
+
+```
+ ##### 上面代码的运行结果为：
+  - 我是session_fixture 
+  - 我是module_fixture 
+  - 我是class_fixture
+  - 我是func_fixture
+ #####  session 级别 fixture：在整个测试会话开始时执行一次。
+ #####  module 级别 fixture：在每个模块开始时执行一次。
+ #####  class 级别 fixture：在每个类开始时执行一次。
+ #####  function 级别 fixture：在每个测试函数执行前后各执行一次。
+ #####  因此，输出顺序是按照作用域从大到小依次执行的。
+# @pytest.mark.usefixtures的用法和 @pytest.fixture 的区别
+1. `@pytest.mark.usefixtures`：用于在测试用例中引用fixture，但不会执行fixture中的代码。
+2. `@pytest.fixture`：用于定义fixture，并执行fixture中的代码。
+
+# @pytest。mark.parametrize的作用
+1. `@pytest.mark.parametrize`：用于参数化测试，将参数值列表作为输入传递给测试函数。
+2. 参数化测试的语法：`@pytest.mark.parametrize('参数名', [参数值列表])`
+3. 用法举例：在yaml文件中读取参数值，并传入测试函数中。
+
+# conftest.py
+1. `conftest.py`的作用是为整个项目配置，例如数据库连接、日志配置等。
+2. `conftest.py`中定义的函数不受层级位置影响，但必须定义在上级或同级目录中，不能定义在下级目录然后从上级引用。
+   
